# yandex-music-qt

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  yandex-music-qt_ru_RU.ts
api/: search.h  searchcategory.h  searchsuggestions.cpp  searchsuggestions.h  yandexmusic.cpp  yandexmusic.h
api/domain/: album.cpp  album.h  artist.cpp  artist.h  entity.h  episode.cpp  episode.h  label.h  playlist.cpp  playlist.h  podcast.cpp  podcast.h  track.cpp  track.h  user.cpp  user.h  video.cpp  video.h
api/utils/: json_serialization.cpp  json_serialization.h
components/: albumcard.cpp  albumcard.h  albumcard.ui  artistcard.cpp  artistcard.h  artistcard.ui  playlistcard.cpp  playlistcard.h  playlistcard.ui  podcastcard.cpp  podcastcard.h  podcastcard.ui
pages/: searchpage.cpp  searchpage.h  searchpage.ui
utils/: json_serialization.cpp  json_serialization.h
